--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -2,7 +2,7 @@ body {
   @include theme-font;
 }
 
-a {
+a:not(.btn, .dropdown-item) {
   @include theme-color("link", "color");
 }
 
